# smart-waste-manager-backend

./: .gitignore  app.py  pyproject.toml  requirements.txt  utils.py
backend/: Database.py  app.py
backend/api/: app.py
backend/connectionbd/: connection_db.py
backend/data/: taux_remplissage_comcom_nebbiu.xlsx
backend/models/: apprentissage_et_prediction.ipynb  apprentissage_initial.ipynb  connection_db.py  initial_insert.py  install.ipynb  start_db.py  test.ipynb  test_db.py  tests_models.ipynb  zone.py
backend/utils/: enter_init_data.py  initial_insert.py
